welcome.lessons.welcome.array.basics.Array2.scala.error
Array1:5: error: object java.awt.Color is not a value
  Color = remplirTableau1(hauteurMonde)
  ^Array1:12: error: object java.awt.Color is not a value
      setCouleurBrosse(Color(l))
                       ^Array1:19: error: not found: type int
def remplirTableau1(hauteurMonde :int):Array[Color] = {
                                  ^